@@ -3,7 +3,11 @@ package com.czertainly.core.service.impl;
 import com.czertainly.api.exception.ValidationException;
 import com.czertainly.api.model.connector.notification.NotificationType;
 import com.czertainly.api.model.core.auth.Resource;
+import com.czertainly.api.model.core.logging.enums.AuditLogOutput;
 import com.czertainly.api.model.core.settings.*;
+import com.czertainly.api.model.core.settings.logging.AuditLoggingSettingsDto;
+import com.czertainly.api.model.core.settings.logging.LoggingSettingsDto;
+import com.czertainly.api.model.core.settings.logging.ResourceLoggingSettingsDto;
 import com.czertainly.core.dao.entity.Setting;
 import com.czertainly.core.dao.repository.SettingRepository;
 import com.czertainly.core.model.auth.ResourceAction;
@@ -11,6 +15,7 @@ import com.czertainly.core.security.authz.ExternalAuthorization;
 import com.czertainly.core.service.SettingService;
 import com.czertainly.core.util.SecretEncodingVersion;
 import com.czertainly.core.util.SecretsUtil;
+import com.czertainly.core.settings.SettingsCache;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -29,16 +34,26 @@ public class SettingServiceImpl implements SettingService {
     public static final String NOTIFICATIONS_MAPPING_NAME = "notificationsMapping";
 
     public static final String OAUTH2_PROVIDER_CATEGORY = "oauth2Provider";
+    public static final String LOGGING_AUDIT_LOG_OUTPUT_NAME = "output";
+    public static final String LOGGING_RESOURCES_NAME = "resources";
 
     private static final Logger logger = LoggerFactory.getLogger(SettingServiceImpl.class);
 
-    private SettingRepository settingRepository;
+    private final ObjectMapper mapper;
+    private final SettingsCache settingsCache;
+    private final SettingRepository settingRepository;
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Autowired
-    public void setSettingRepository(SettingRepository settingRepository) {
+    public SettingServiceImpl(SettingsCache settingsCache, SettingRepository settingRepository, ObjectMapper mapper) {
+        this.mapper = mapper;
+        this.settingsCache = settingsCache;
         this.settingRepository = settingRepository;
+
+        settingsCache.cacheSettings(SettingsSection.PLATFORM, getPlatformSettings());
+        settingsCache.cacheSettings(SettingsSection.LOGGING, getLoggingSettings());
+        settingsCache.cacheSettings(SettingsSection.NOTIFICATIONS, getNotificationSettings());
     }
 
     @Override
@@ -50,7 +65,7 @@ public class SettingServiceImpl implements SettingService {
         PlatformSettingsDto platformSettings = new PlatformSettingsDto();
 
         // utils
-        Map<String, Setting> utilsSettings = mappedSettings.get("utils");
+        Map<String, Setting> utilsSettings = mappedSettings.get(SettingsSectionCategory.PLATFORM_UTILS.getCode());
         UtilsSettingsDto utilsSettingsDto = new UtilsSettingsDto();
         if (utilsSettings != null)
             utilsSettingsDto.setUtilsServiceUrl(utilsSettings.get(UTILS_SERVICE_URL_NAME).getValue());
@@ -67,25 +82,27 @@ public class SettingServiceImpl implements SettingService {
 
         // utils
         Setting setting = null;
-        Map<String, Setting> utilsSettings = mappedSettings.get("utils");
+        Map<String, Setting> utilsSettings = mappedSettings.get(SettingsSectionCategory.PLATFORM_UTILS.getCode());
         if (utilsSettings == null || (setting = utilsSettings.get(UTILS_SERVICE_URL_NAME)) == null) {
             setting = new Setting();
             setting.setSection(SettingsSection.PLATFORM);
-            setting.setCategory("utils");
+            setting.setCategory(SettingsSectionCategory.PLATFORM_UTILS.getCode());
             setting.setName(UTILS_SERVICE_URL_NAME);
         }
 
         setting.setValue(platformSettings.getUtils().getUtilsServiceUrl());
         settingRepository.save(setting);
+
+        settingsCache.cacheSettings(SettingsSection.PLATFORM, platformSettings);
     }
 
     @Override
     @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
     public NotificationSettingsDto getNotificationSettings() {
         List<Setting> settings = settingRepository.findBySection(SettingsSection.NOTIFICATIONS);
-        Map<NotificationType, String> valueMapped = new HashMap<>();
+        Map<NotificationType, String> valueMapped = new EnumMap<>(NotificationType.class);
         if (!settings.isEmpty()) {
-            String valueJson = settings.get(0).getValue();
+            String valueJson = settings.getFirst().getValue();
             if (valueJson != null) {
                 TypeReference<Map<NotificationType, String>> typeReference = new TypeReference<>() {
                 };
@@ -93,7 +110,8 @@ public class SettingServiceImpl implements SettingService {
                 try {
                     valueMapped = objectMapper.readValue(valueJson, typeReference);
                 } catch (JsonProcessingException e) {
-                    throw new ValidationException("Could not convert JSON to value.");
+                    logger.warn("Cannot deserialize notification mapping settings. Returning empty mapping.");
+                    valueMapped = new EnumMap<>(NotificationType.class);
                 }
             }
         }
@@ -115,7 +133,7 @@ public class SettingServiceImpl implements SettingService {
             setting.setSection(SettingsSection.NOTIFICATIONS);
             setting.setName(NOTIFICATIONS_MAPPING_NAME);
         } else {
-            setting = settings.get(0);
+            setting = settings.getFirst();
         }
 
         Map<NotificationType, String> notificationTypeStringMap = notificationSettings.getNotificationsMapping();
@@ -129,9 +147,106 @@ public class SettingServiceImpl implements SettingService {
         try {
             setting.setValue(objectMapper.writeValueAsString(notificationTypeStringMap));
         } catch (JsonProcessingException e) {
-            throw new ValidationException("Could not convert JSON to value.");
+            throw new ValidationException("Cannot serialize notification mapping settings: " + e.getMessage());
         }
         settingRepository.save(setting);
+        settingsCache.cacheSettings(SettingsSection.NOTIFICATIONS, notificationSettings);
+
+    }
+
+    @Override
+    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
+    public LoggingSettingsDto getLoggingSettings() {
+        LoggingSettingsDto loggingSettingsDto = new LoggingSettingsDto();
+        List<Setting> settings = settingRepository.findBySection(SettingsSection.LOGGING);
+        Map<String, Map<String, Setting>> mappedSettings = mapSettingsByCategory(settings);
+
+        // audit logging
+        Setting setting;
+        Map<String, Setting> auditLoggingSettings = mappedSettings.get(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+        AuditLoggingSettingsDto auditLoggingSettingsDto = new AuditLoggingSettingsDto();
+        if (auditLoggingSettings != null) {
+            if ((setting = auditLoggingSettings.get(LOGGING_AUDIT_LOG_OUTPUT_NAME)) != null) {
+                auditLoggingSettingsDto.setOutput(AuditLogOutput.valueOf(setting.getValue()));
+            }
+            if ((setting = auditLoggingSettings.get(LOGGING_RESOURCES_NAME)) != null) {
+                ResourceLoggingSettingsDto resources;
+                try {
+                    resources = mapper.readValue(setting.getValue(), ResourceLoggingSettingsDto.class);
+                } catch (JsonProcessingException e) {
+                    logger.warn("Cannot deserialize audit logs resource settings. Returning default settings.");
+                    resources = new ResourceLoggingSettingsDto();
+                }
+                auditLoggingSettingsDto.setResourceLogging(resources);
+            }
+        }
+        loggingSettingsDto.setAuditLogs(auditLoggingSettingsDto);
+
+        // event logging
+        Map<String, Setting> eventLoggingSettings = mappedSettings.get(SettingsSectionCategory.EVENT_LOGGING.getCode());
+        ResourceLoggingSettingsDto eventLoggingSettingsDto = new ResourceLoggingSettingsDto();
+        if (eventLoggingSettings != null && (setting = eventLoggingSettings.get(LOGGING_RESOURCES_NAME)) != null) {
+            ResourceLoggingSettingsDto resources;
+            try {
+                resources = mapper.readValue(setting.getValue(), ResourceLoggingSettingsDto.class);
+            } catch (JsonProcessingException e) {
+                logger.warn("Cannot deserialize event logs resource settings. Returning default settings.");
+                resources = new ResourceLoggingSettingsDto();
+            }
+            eventLoggingSettingsDto = resources;
+        }
+        loggingSettingsDto.setEventLogs(eventLoggingSettingsDto);
+
+        return loggingSettingsDto;
+    }
+
+    @Override
+    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.UPDATE)
+    public void updateLoggingSettings(LoggingSettingsDto loggingSettingsDto) {
+        List<Setting> settings = settingRepository.findBySection(SettingsSection.LOGGING);
+        Map<String, Map<String, Setting>> mappedSettings = mapSettingsByCategory(settings);
+
+        // audit logging
+        Setting setting;
+        Map<String, Setting> auditLoggingSettings = mappedSettings.get(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+        if (auditLoggingSettings == null || (setting = auditLoggingSettings.get(LOGGING_AUDIT_LOG_OUTPUT_NAME)) == null) {
+            setting = new Setting();
+            setting.setSection(SettingsSection.LOGGING);
+            setting.setCategory(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+            setting.setName(LOGGING_AUDIT_LOG_OUTPUT_NAME);
+        }
+        setting.setValue(loggingSettingsDto.getAuditLogs().getOutput().toString());
+        settingRepository.save(setting);
+
+        if (auditLoggingSettings == null || (setting = auditLoggingSettings.get(LOGGING_RESOURCES_NAME)) == null) {
+            setting = new Setting();
+            setting.setSection(SettingsSection.LOGGING);
+            setting.setCategory(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+            setting.setName(LOGGING_RESOURCES_NAME);
+        }
+        try {
+            setting.setValue(mapper.writeValueAsString(mapper.convertValue(loggingSettingsDto.getAuditLogs(), ResourceLoggingSettingsDto.class)));
+            settingRepository.save(setting);
+        } catch (JsonProcessingException e) {
+            throw new ValidationException("Cannot serialize audit logging resources settings: " + e.getMessage());
+        }
+
+        // event logging
+        Map<String, Setting> eventLoggingSettings = mappedSettings.get(SettingsSectionCategory.EVENT_LOGGING.getCode());
+        if (eventLoggingSettings == null || (setting = eventLoggingSettings.get(LOGGING_RESOURCES_NAME)) == null) {
+            setting = new Setting();
+            setting.setSection(SettingsSection.LOGGING);
+            setting.setCategory(SettingsSectionCategory.EVENT_LOGGING.getCode());
+            setting.setName(LOGGING_RESOURCES_NAME);
+        }
+        try {
+            setting.setValue(mapper.writeValueAsString(loggingSettingsDto.getEventLogs()));
+            settingRepository.save(setting);
+        } catch (JsonProcessingException e) {
+            throw new ValidationException("Cannot serialize event logging resources settings: " + e.getMessage());
+        }
+
+        settingsCache.cacheSettings(SettingsSection.LOGGING, loggingSettingsDto);
     }
 
     @Override
@@ -217,12 +332,10 @@ public class SettingServiceImpl implements SettingService {
         var mapping = new HashMap<String, Map<String, Setting>>();
 
         for (Setting setting : settings) {
-            String category = setting.getCategory();
-            Map<String, Setting> categorySettings = mapping.computeIfAbsent(category, k -> new HashMap<>());
+            Map<String, Setting> categorySettings = mapping.computeIfAbsent(setting.getCategory(), k -> new HashMap<>());
             categorySettings.put(setting.getName(), setting);
         }
 
         return mapping;
     }
-
 }
